# bb

./: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bzlmod
lib/: BUILD
