module(
    name = "redpanda",
    repo_name = "com_github_redpanda_data_redpanda",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")


# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "5bcb0bd8a917b2b48fb5dc55818515f4be3b63ff",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

bazel_dep(name = "rules_foreign_cc", version = "0.10.1")

bazel_dep(name = "xxhash", version = "0.8.2")
bazel_dep(name = "zstd", version = "1.5.6")
bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "abseil-cpp", version = "20240116.1")
bazel_dep(name = "crc32c", version = "1.1.0")
bazel_dep(name = "yaml-cpp", version = "0.8.0")
bazel_dep(name = "c-ares", version = "1.16.1")
bazel_dep(name = "protobuf", version = "26.0")
bazel_dep(name = "fmt", version = "8.1.1")
bazel_dep(name = "zlib", version = "1.2.13")
bazel_dep(name = "liburing", version = "2.5")
bazel_dep(name = "hdrhistogram_c", version = "0.11.2")
bazel_dep(name = "rapidjson", version = "1.1.0")
bazel_dep(name = "re2", version = "2021-09-01")
bazel_dep(name = "lz4", version = "1.9.4")

http_archive(
    name = "nettle",
    build_file = "@//thirdparty:nettle.BUILD",
    sha256 = "ccfeff981b0ca71bbd6fbcb054f407c60ffb644389a5be80d6716d5b550c6ce3",
    strip_prefix = "nettle-3.9.1",
    url = "https://vectorized-public.s3.amazonaws.com/dependencies/nettle-3.9.1.tar.gz",
)

http_archive(
    name = "gmp",
    build_file = "@//thirdparty:gmp.BUILD",
    sha256 = "fd4829912cddd12f84181c3451cc752be224643e87fac497b69edddadc49b4f2",
    strip_prefix = "gmp-6.2.1",
    url = "https://vectorized-public.s3.amazonaws.com/dependencies/gmp-6.2.1.tar.xz",
)

http_archive(
    name = "gnutls",
    build_file = "@//thirdparty:gnutls.BUILD",
    sha256 = "f74fc5954b27d4ec6dfbb11dea987888b5b124289a3703afcada0ee520f4173e",
    strip_prefix = "gnutls-3.8.3",
    url = "https://vectorized-public.s3.us-west-2.amazonaws.com/dependencies/gnutls-3.8.3.tar.xz",
)

http_archive(
    name = "numactl",
    build_file = "@//thirdparty:numactl.BUILD",
    sha256 = "1ee27abd07ff6ba140aaf9bc6379b37825e54496e01d6f7343330cf1a4487035",
    strip_prefix = "numactl-2.0.14",
    url = "https://vectorized-public.s3.amazonaws.com/dependencies/numactl-v2.0.14.tar.gz",
)

http_archive(
    name = "libpciaccess",
    build_file = "@//thirdparty:libpciaccess.BUILD",
    sha256 = "9938b18509553452c6e13f79e16cbaffec9ea67119aa2de5d75e83c4f67ff400",
    strip_prefix = "libpciaccess-libpciaccess-0.16",
    url = "https://vectorized-public.s3.amazonaws.com/dependencies/libpciaccess-0.16.tar.bz2",
)

http_archive(
    name = "hwloc",
    build_file = "@//thirdparty:hwloc.BUILD",
    sha256 = "1f6d0f3edddd0070717f9f17e3a090a26d203e026c192144aa5f587725cf11e3",
    strip_prefix = "hwloc-hwloc-2.9.3",
    url = "https://vectorized-public.s3.amazonaws.com/dependencies/hwloc-2.9.3.tar.gz",
)

http_archive(
    name = "krb5",
    build_file = "@//thirdparty:krb5.BUILD",
    sha256 = "ec3861c3bec29aa8da9281953c680edfdab1754d1b1db8761c1d824e4b25496a",
    strip_prefix = "krb5-krb5-1.20.1-final",
    url = "https://vectorized-public.s3.us-west-2.amazonaws.com/dependencies/krb5-krb5-1.20.1-final.tar.gz",
)

http_archive(
    name = "xz",
    build_file = "@//thirdparty:xz.BUILD",
    sha256 = "0d2b89629f13dd1a0602810529327195eff5f62a0142ccd65b903bc16a4ac78a",
    strip_prefix = "xz-5.2.5",
    url = "https://vectorized-public.s3.amazonaws.com/dependencies/xz-v5.2.5.tar.gz",
)

http_archive(
    name = "xml2",
    build_file = "@//thirdparty:xml2.BUILD",
    sha256 = "ed0c91c5845008f1936739e4eee2035531c1c94742c6541f44ee66d885948d45",
    strip_prefix = "libxml2-2.10.4",
    url = "https://vectorized-public.s3.amazonaws.com/dependencies/libxml2-2.10.4.tar.xz",
)

http_archive(
    name = "cryptopp",
    build_file = "@//thirdparty:cryptopp.BUILD",
    sha256 = "11a6dbc749c27687ddf13195950589596f51361210a1f67e3c383cc4961f3e61",
    strip_prefix = "cryptopp-CRYPTOPP_8_7_0",
    url = "https://vectorized-public.s3.amazonaws.com/dependencies/CRYPTOPP_8_7_0.tar.xz",
)

http_archive(
    name = "base64",
    build_file = "@//thirdparty:base64.BUILD",
    sha256 = "b21be58a90d31302ba86056db7ef77a481393b9359c505be5337d7d54e8a0559",
    strip_prefix = "base64-0.5.0",
    url = "https://vectorized-public.s3.amazonaws.com/dependencies/base64-v0.5.0.tar.gz",
)

http_archive(
    name = "ada",
    build_file = "@//thirdparty:ada.BUILD",
    sha256 = "8e222d536d237269488f7d454544eedf12847f47b3d42651e8c9963c3fb0cf5e",
    strip_prefix = "ada-2.7.3",
    url = "https://vectorized-public.s3.us-west-2.amazonaws.com/dependencies/ada-2.7.3.tar.gz",
)

http_archive(
    name = "openssl",
    build_file = "@//thirdparty:openssl.BUILD",
    sha256 = "eb1ab04781474360f77c318ab89d8c5a03abc38e63d65a603cabbf1b00a1dc90",
    strip_prefix = "openssl-3.0.9",
    url = "https://vectorized-public.s3.us-west-2.amazonaws.com/dependencies/openssl-3.0.9.tar.gz",
)

http_archive(
    name = "avro",
    build_file = "@//thirdparty:avro.BUILD",
    sha256 = "d4043000885812223c7a8a444781f9ded46aca4dc6216d86bbde18fd94c1562a",
    strip_prefix = "avro-836cb1004090435a985becda1daa619c407e1376",
    url = "https://github.com/redpanda-data/avro/archive/836cb1004090435a985becda1daa619c407e1376.tar.gz",
)

http_archive(
    name = "boost",
    build_file = "@//thirdparty:boost.BUILD",
    #sha256 = "273f1be93238a068aba4f9735a4a2b003019af067b9c183ed227780b8f36062c",
    #strip_prefix = "boost_1_79_0",
    strip_prefix = "boost_1_85_0",
    #url = "https://boostorg.jfrog.io/artifactory/main/release/1.79.0/source/boost_1_79_0.tar.gz",
    sha256 = "be0d91732d5b0cc6fbb275c7939974457e79b54d6f07ce2e3dfdd68bef883b0b",
    url = "https://boostorg.jfrog.io/artifactory/main/release/1.85.0/source/boost_1_85_0.tar.gz",
)
